contact-me not displaying well on mobile, fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,7 +526,7 @@ p {
 
 @media all and (max-width: 575.98px) { 
     .display-2 {
-     font-size: 5.5vmax;
+     font-size: 5vmax;
     }
 }
 
@@ -696,7 +696,7 @@ p {
 
 @media all and (max-width: 575.98px) {
     .form-container { 
-     width: 70%;
+     width: 65%;
     }
 }
 
